--- a/hurusato/admin_common.html
+++ b/hurusato/admin_common.html
@@ -20,6 +20,7 @@
     <script src="./js/jquery.blockUI.js"></script>
     <script src="./js/jquery.upload-1.0.2.min.js"></script>
     <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
+    <script src="./js/jquery.narrows.js"></script>
     <style type="text/css">
         body {
             font-family: 'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
