--- a/hurusato/admin_common.html
+++ b/hurusato/admin_common.html
@@ -68,6 +68,20 @@
                 dayNamesMin: ['日', '月', '火', '水', '木', '金', '土'],
                 hideIfNoPrevNext: true
             });
+
+            jQuery(".datepicker2").datepicker({
+                // Datepicker設定
+                dateFormat: 'yy-mm-dd',
+                yearSuffix: '年',
+                showMonthAfterYear: true,
+                monthNames: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
+                dayNames: ['日', '月', '火', '水', '木', '金', '土'],
+                dayNamesMin: ['日', '月', '火', '水', '木', '金', '土'],
+                hideIfNoPrevNext: true,
+                showOn: "button",
+                buttonText: "日付を選択",
+                showButtonPanel: true
+            });
         });
     </script>
     <script type="text/javascript" src="./js/jquery.floatThead.js"></script>
@@ -116,6 +130,7 @@
                 <div class="menucont">
                     <a class="menubtn" href="./mnt_data.php">ふるさと納税台帳</a>
                     <a class="menubtn" href="./rep_item.php">特産品別カウント</a>
+                    <a class="menubtn" href="./dl.php">ダウンロード</a>
                     <a class="menubtn" href="./items.php">商品管理</a>
                     <a class="menubtn" href="./clients.php">業者管理</a>
                 </div>
