--- a/aflasp/x10/done.html
+++ b/aflasp/x10/done.html
@@ -7,9 +7,9 @@
 
 <body class="header-fixed">
 
-    DOME
+    DONE
 
-    <img src="http://localhost:81/aflasp/add.php?check=8Z43e9Hq&adwares=A0000011" width="1" height="1">
+    <img src="http://localhost:81/aflasp/add.php?check=8Z43e9Hq&adwares=A0000001" width="1" height="1">
 </body>
 
 </html>
