--- a/aflasp/x10/index.html
+++ b/aflasp/x10/index.html
@@ -7,8 +7,11 @@
 
 <body class="header-fixed">
 
-    <a href='http://localhost:81/aflasp/link.php?id=N0000001&adwares=A0000011'>A0000011</a><br>
-    <a href='http://localhost:81/aflasp/link.php?id=N0000001&adwares=A0000017'>A0000017</a>
+    <a href='http://localhost:81/aflasp/link.php?id=N0000001&adwares=A0000001'>A0000001</a><br>
+    <a href='http://localhost:81/aflasp/link.php?id=N0000001&adwares=A0000002'>A0000002</a><br>
+
+    <a href='http://localhost:81/aflasp/link.php?id=N0000001&s_adwares=SA000001'>SA000001</a><br>
+    <a href='http://localhost:81/aflasp/link.php?id=N0000001&s_adwares=SA000002'>SA000002</a><br>
 </body>
 
 </html>
