--- a/aflasp/x10/return.html
+++ b/aflasp/x10/return.html
@@ -7,7 +7,8 @@
 
 <body class="header-fixed">
 
-    <a href='http://localhost:81/aflasp/x10/done.html'>DONE</a>
+    <a href='http://localhost:81/aflasp/x10/done.html'>DONE　A0000001</a>
+
 </body>
 
 </html>
